Fixing issues with page headers on tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -1421,7 +1421,7 @@ ABOUT US
 }
 
 .main-arrow-section {
-	width: 100%;
+	width: 600px;
 	height: auto;
 }
 
